--- a/package.json
+++ b/package.json
@@ -9,7 +9,16 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@tensorflow-models/mobilenet": "^2.1.1",
+    "@tensorflow/tfjs-converter": "^4.13.0",
+    "@tensorflow/tfjs-core": "^4.13.0",
+    "@tensorflow/tfjs-backend-cpu": "^4.13.0",
+    "node-sass": "9.0.0",
+    "@mui/material": "^5.0.0",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.7.0",
+    "@mui/icons-material": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
